trainer section is complete

--- a/src/index.css
+++ b/src/index.css
@@ -426,30 +426,30 @@ body {
   background-size: cover;
   background-position: center center;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .video-div::before {
   content: "";
-  height: 400px;
+  height: 461px;
   width: 10px;
   background-color: #ff0336;
   position: absolute;
-  top: 45%;
+  top: 50%;
   -webkit-transform: translateY(-50%) rotate(174deg);
-  transform: translateY(-50%) rotate(176deg);
-  left: -23px;
+  transform: translateY(-50%) rotate(174deg);
+  right: 10px;
 }
 
-/* .video-div::after {
+.video-div::after {
   content: "";
   height: 42%;
   width: 10px;
   background-color: #ff0336;
   position: absolute;
   bottom: 0;
-  right: 30px;
-  } */
+  left: -30px;
+}
 
 .choose-cta {
   transition: all 0.4s;
@@ -481,6 +481,7 @@ body {
   position: absolute;
   top: 0;
   right: 0;
+  height: 100vh;
 }
 
 .box-desc::after {
