--- a/src/index.css
+++ b/src/index.css
@@ -658,10 +658,10 @@ body {
 }
 
 .login-banner {
-  background-image: url("../src/images/login/banner.jpg");
+  background-image: url("../src/images/login/bg3.jpg");
   object-fit: cover;
   background-size: cover;
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   width: 100%;
   height: 45vh;
